--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Navbar</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="topnav.css">
+    <link rel="stylesheet" href="menu.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
     </div>
     <div class="text">
         <h1>Welcome to Personalizer</h1>
-        <p>This is a paragraph that you can adapt its content <br>Click to Personalizer banner</p>
+        <p>This is a paragraph that you can adapt its content<br><br>Click to Personalizer banner</p>
     </div>
 </body>
 </html>
