--- a/menu.html
+++ b/menu.html
@@ -10,10 +10,13 @@
 <body>
 
     <div class="navbar">
-        <a href="menu.html">Personalizer</a>
-        <a href="form.html">Form</a>
-        <a href="images.html">Images</a>
-        <a href="#">Mode</a>
+        <ul>
+            <li><a href="">Personalizer</a>
+                <div class="menu2"></div>
+            </li>
+            <li><a href="form.html">Form</a></li>
+            <li><a href="images.html">Images</a></li>
+        </ul>
     </div>
     <div class="text">
         <h1>Welcome to Personalizer</h1>
